--- a/index2.html
+++ b/index2.html
@@ -68,7 +68,7 @@
               @click="toggleLayer(layer)"
               v-model="layer.visible"
             />
-            {{layer.name}}-{{layer.visible}}
+            {{layer.name}}
           </li>
         </ul>
       </div>
@@ -81,7 +81,7 @@
               @click="toggleLayer(layer)"
               v-model="layer.visible"
             />
-            {{layer.name}}-{{layer.visible}}
+            {{layer.name}}
           </li>
         </ul>
       </div>
