--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
       name="viewport"
       content="initial-scale=1,maximum-scale=1,user-scalable=no"
     />
-    <title>Synchronize SceneView One MapCore</title>
+    <title>Synchronize One MapCore</title>
     <style>
       html,
       body {
