--- a/index2.html
+++ b/index2.html
@@ -5,7 +5,7 @@
       name="viewport"
       content="initial-scale=1,maximum-scale=1,user-scalable=no"
     />
-    <title>Synchronize SceneView Two MapCore</title>
+    <title>Synchronize Two MapCore</title>
     <style>
       html,
       body {
