--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
       return new Vue({
         el: "#app",
         data: {
-          title: "三維影像雙視窗比對測試(單地圖核心)，(如果點擊同步時右側地圖圖層狀態會與左側地圖一致)",
+          title: "三維影像雙視窗比對測試(單地圖核心)，(點擊同步時右側地圖圖層狀態會與左側地圖一致)",
           allLayers: [_featureLayer],
           isSynchronized: false,
           map: null,
