--- a/index2.html
+++ b/index2.html
@@ -100,7 +100,7 @@
         el: "#app",
         data: {
           title:
-            "三維影像雙視窗比對測試(雙地圖核心)，(如果點擊同步時右側地圖圖層狀態會與左側地圖一致)",
+            "三維影像雙視窗比對測試(雙地圖核心)，(點擊同步時右側地圖圖層狀態會與左側地圖一致)",
           view1Layers: [_featureLayer1],
           view2Layers: [_featureLayer2],
           isSynchronized: false,
